# YGB

./: .clangd  .cleanignore  .coveragerc-ci  .env  .env.connected  .env.example  .env.privacy  .env.voice_connected  .env.voice_privacy  .env_secrets.txt  .gitignore  .pyre_configuration  .tmp_audit_repo_map.json  .tmp_import_smoke.json  .tmp_inferred_scores.json  .tmp_master_existence.json  .tmp_master_scorecard.json  .tmp_module_map.json  .tmp_repo_map.json  .tmp_repo_map.txt  ACTIONABLE_FIX_ROADMAP.md  AUDIT_SUMMARY.txt  BACKEND_OPTIMIZATION_SUMMARY.md  BENCHMARK_RESULTS.json  BRUTAL_HONEST_CODEBASE_REVIEW.md  BUG_BOUNTY_CAPABILITY_ASSESSMENT.md  CHECK_SYSTEM.py  COMPLETE_CODEBASE_AUDIT_REPORT.md  COMPREHENSIVE_SYSTEM_ASSESSMENT.md  COMPREHENSIVE_SYSTEM_AUDIT_2026.md  CRITICAL_CODEBASE_REVIEW.md  EXECUTION_SUMMARY.md  EXECUTIVE_SUMMARY.md  FINAL_AUDIT_REPORT.md  FRAMEWORK_SCAN_REPORT_FOR_AI_TEAM.md  G38_TRAINING_TRANSPARENCY_AUDIT.md  HONEST_ASSESSMENT_SUMMARY.md  IMPL_V1_FULL_AUDIT_REPORT.md  IMPL_V1_PHASE20_AUDIT_REPORT.md  IMPL_V1_PHASE20_FREEZE.md  (+237 more)
native/: CMakeLists.txt  risk_shift_guard.c  risk_shift_guard.h  run_cpp_tests.cpp
native/accuracy/: accuracy_provenance.cpp
native/api_logic/: graphql_schema_analyzer.cpp  idor_pattern_engine.cpp  rate_limit_analyzer.cpp  role_escalation_detector.cpp  state_machine_validator.cpp
native/autonomy_supervisor/: dataset_integrity.cpp  log_integrity.cpp  resource_monitor.cpp  system_integrity.cpp
native/bootstrap/: device_bootstrap.cpp
native/browser_curriculum/: content_hash_index.cpp  cve_feed_parser.cpp  edge_headless_engine.cpp  representation_expansion_engine.cpp  semantic_deduplicator.cpp
native/calibration/: inflation_guard.cpp  temperature_scaling.cpp
native/client_side/: csp_misconfig_detector.cpp  dom_pattern_engine.cpp  postmessage_graph.cpp  storage_abuse_detector.cpp  xss_structure_analyzer.cpp
native/cluster/: cluster_role.cpp
native/cluster_role/: cluster_role.cpp
native/confidence_engine/: confidence_scorer.cpp  evidence_strength.cpp  reproducibility_score.cpp
native/containment/: containment_controller.cpp
native/data_freshness/: curriculum_scheduler.cpp  dataset_entropy_monitor.cpp
native/determinism/: cross_device_validator.cpp
native/device_identity/: device_identity.cpp
native/device_registry/: device_registry.cpp
native/distributed/: async_allreduce.cpp  authority_wal.cpp  auto_ingest_engine.cpp  build_bridge.py  chaos_variance_injector.cpp  compression_engine.cpp  deterministic_sync.cpp  deterministic_sync_validator.cpp  duplicate_likelihood_estimator.cpp  exploit_verifier_engine.cpp  federated_merge_guard.cpp  field_isolation_controller.cpp  global_risk_supervisor.cpp  gpu_cpu_allocator.cpp  gpu_load_control.cpp  gpu_optimizer.cpp  hallucination_guard.cpp  incremental_sync.cpp  independent_validation_split.cpp  ingestion_bridge.cpp  ingestion_engine.cpp  leader_election.cpp  live_shadow_inference_engine.cpp  multi_environment_simulator.cpp  multi_step_reasoning_graph.cpp  nas_service.cpp  node_identity.cpp  passive_live_shadow_validator.cpp  perf_optimizer.cpp  semantic_drift_detector.cpp  shard_storage.cpp  storage_engine.cpp  temporal_weighting_engine.cpp  training_telemetry.cpp  weight_exporter.cpp  weight_import_validator.cpp  weight_snapshot_engine.cpp  zero_trust_validator.cpp
native/duplicate_engine/: cve_similarity_matcher.cpp  duplicate_probability.cpp  similarity_index.cpp
native/evidence/: evidence_manifest.cpp  hash_chain.cpp  screenshot_engine.cpp  video_recorder.cpp
native/feature_engine/: feature_diversifier.cpp  feature_diversifier.h
native/field_controller/: field_certification_engine.cpp  field_isolation_guard.cpp  field_state_engine.cpp
native/field_lifecycle/: field_certification_engine.cpp  field_freeze_guard.cpp  field_progress_calculator.cpp  field_progression_controller.cpp  field_state_engine.cpp  field_tasklist_engine.cpp
native/governance_guard/: automation_guard.cpp  scope_validator.cpp  submission_blocker.cpp
native/gpu_stability/: gpu_stability_monitor.cpp
native/hdd_engine/: __init__.py  disk_monitor.py  hdd_engine.py  lifecycle_manager.py  secure_wiper.py  video_streamer.py
native/hunt_engine/: parallel_executor.cpp  resource_governor.cpp  thermal_guard.cpp
native/hunt_guard/: hunt_duplicate_guard.cpp  hunt_precision_guard.cpp  hunt_scope_guard.cpp
native/lab_training/: accuracy_tracker.cpp  lab_scheduler.cpp  regression_suite.cpp  stress_simulator.cpp
native/lifecycle/: phase_state_engine.cpp
native/merge_guard/: shadow_merge_validator.cpp
native/merge_layer/: calibration_alignment.cpp  drift_alignment.cpp  entropy_preservation.cpp  feature_alignment.cpp
native/mode_runtime/: mode_lock.cpp
native/pairing/: device_registry.cpp  pairing_server.cpp
native/performance/: amp_controller.cpp  (+5 more)
(+11771 files in other folders)
